# urban-agri-planner

./: .gitignore  LICENSE  README.md  TODO.md  test_mcp_servers.py  walkthrough.md
backend/: .env.example  README.md  agents.py  i18n.py  main.py  pyproject.toml  test_backend.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: viz.jsx
frontend/src/lib/: exporters.js  i18n.jsx
mcp-botanical-server/: README.md  db.json  pyproject.toml  server.py
mcp-climate-server/: README.md  pyproject.toml  server.py
