[project]
name = "urban-agri-planner-backend"
version = "1.0.0"
description = "FastAPI orchestrator running a Google ADK multi-agent pipeline with MCP tools and a human-in-the-loop security checkpoint for the Urban Agri-Planner."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "google-adk>=2.3.0",
    "google-genai>=2.9.0",
    "mcp>=1.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "agents.py"]
