[project]
name = "mcp-botanical-server"
version = "1.0.0"
description = "Botanical compatibility & companion-planting MCP server (FastMCP) for Urban Agri-Planner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py", "db.json"]
