[project]
name = "mcp-climate-server"
version = "1.0.0"
description = "Climate & geocoding MCP server (FastMCP) for Urban Agri-Planner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
